// npm i ts-proto
// protoc --plugin=protoc-gen-ts_proto=.\\node_modules\\.bin\\protoc-gen-ts_proto.cmd --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/auth.proto
syntax = "proto3";

package user;

service UserService {
    rpc CreateUser (CreateUserDto) returns (UserResponse) {}
    rpc Login (LoginDto) returns (TokenResponse) {}
    rpc FindAllUsers (Empty) returns (UsersResponse) {}
    rpc FindOneUser (FindOneUserDto) returns (UserResponse) {}
    rpc UpdateUser (UpdateUserDto) returns (UserResponse) {}
}

message Status {
    bool success = 1;
    string message = 2;
}

message UserResponse {
    Status status = 1;
    User user = 2;
}

message UsersResponse {
    Status status = 1;
    Users users = 2;
}

message TokenResponse {
    Status status = 1;
    string accessToken = 2;
    string refreshToken = 3;
}

message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
}
  
message UpdateUserDto {
    string id = 1;
    int32 age = 2;
    string password = 3;
    string fullName = 4;
}
  
message FindOneUserDto {
    string id = 1;
}
  
message Empty {};
  
message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string username = 1;
    string password = 2;
    string fullName = 3;
}

message LoginDto {
    string username = 1;
    string password = 2;
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string fullName = 4;
    int32 age = 5;
    bool isOnline = 6;
    int64  lastOnline = 7;
    int64  createdDate = 8;
    int64  updatedDate = 9;
}